# napi-current-env

./: Cargo.toml  README.md
examples/greet/: Cargo.toml
examples/greet/src/: greetings.rs  lib.rs
src/: lib.rs
tests/: greet.rs
