[package]
name = "napi-current-env"
version = "1.0.0"
edition = "2024"
description = "🪛 Well-known global for the current napi::Env"
repository = "https://github.com/jcbhmr/napi-current-env"
homepage = "https://docs.rs/napi-current-env"
license = "MIT"

[workspace]
members = ["examples/*"]

[dependencies]
napi = { version = "3.8.2", features = ["tokio"] }
tokio = "1.49.0"

[dev-dependencies]
fs-err = "3.2.2"
